--- a/netnaveia/netnaveia/index.html
+++ b/netnaveia/netnaveia/index.html
@@ -7,7 +7,7 @@
         <br>
         <p> <h4> Menu: <br> <br> <a href="meios.html">Meios de Transmissão</a> <br>
             <a href="arquitetura.html">Arquitetura</a> <br>
-            <a href="arquitetura.html">Topologia</a> <br>
+            <a href="topologia.html">Topologia</a> <br>
             
         </h4>
         </p>
